# lumina-mcp

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 48578cfeb06a_add_output_urls_to_codebase_videos.py  f9c5eba03d33_add_error_message_to_codebase_videos.py
backend/lumina_app/: database.py  main.py  models.py  onboarding.py  renderer.py  schemas.py  settings.py
backend/lumina_app/ai/: __init__.py  documenter.py  generator.py  planner.py  summarizer.py
backend/lumina_app/extract/: __init__.py  base.py  cache.py  cluster.py  detect.py  dispatch.py  graph.py  schema.py  tree_sitter_base.py
backend/lumina_app/extract/extractors/: __init__.py  c_cpp.py  csharp.py  generic.py  go.py  java.py  javascript.py  kotlin.py  php.py  python.py  ruby.py  rust.py  scala.py  typescript.py
backend/lumina_app/parser/: __init__.py  base.py  graph.py  python.py  typescript.py
backend/tests/: conftest.py  test_ai.py  test_analyze.py  test_docs.py  test_extract.py  test_onboard.py  test_parser.py  test_renderer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/docs/: DocList.tsx  DocViewer.tsx
frontend/src/components/graph/: DependencyGraph.tsx  GraphEdge.tsx  GraphInfo.tsx  GraphNode.tsx  NodeDetailPanel.tsx  StarField.tsx  colors.ts  layout.ts
frontend/src/components/landing/: HeroBackground.tsx  ParticleField.tsx
frontend/src/components/layout/: LoadingSpinner.tsx  Navbar.tsx  ProgressBar.tsx
frontend/src/components/videos/: GenerateButton.tsx  VideoList.tsx  VideoPlayer.tsx
frontend/src/pages/: AnalyzePage.tsx  LandingPage.tsx  ResultsPage.tsx
frontend/src/utils/: parsePastedFiles.ts  zip.ts
infra/: docker-compose.yml
mcp/: CLAUDE.md  README.md  pyproject.toml  server.py
mcp/tests/: test_server.py
