[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumina-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "pydantic-settings==2.5.2",
    "httpx==0.27.2",
    "manim-studio-sdk==0.1.0",
    "anthropic==0.34.2",
    "python-multipart==0.0.12",
    "sentry-sdk[fastapi]==2.14.0",
    # Core graph
    "networkx==3.3",
    "graspologic==3.4.1", # Leiden community detection (optional at runtime)
    # Tree-sitter core
    "tree-sitter==0.25.2",
    # Language grammars (tree-sitter bindings)
    "tree-sitter-python==0.23.4",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-go==0.23.1",
    "tree-sitter-rust==0.23.2",
    "tree-sitter-java==0.23.2",
    "tree-sitter-c==0.23.5",
    "tree-sitter-cpp==0.23.1",
    "tree-sitter-ruby==0.23.1",
    "tree-sitter-c-sharp==0.23.1",
    "tree-sitter-kotlin==1.1.0",
    "tree-sitter-scala==0.23.3",
    "tree-sitter-php==0.23.6",
    "tree-sitter-swift==0.7.2",
    "tree-sitter-lua==0.5.0",
    "future>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "pytest-mock==3.14.0",
    "aiosqlite==0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["lumina_app"]
