[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumina-mcp"
version = "0.1.0"
description = "MCP server for Lumina codebase intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
